--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
       type="text/css"
     />
 
-    <script src="https://kit.fontawesome.com/424cd50bdd.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/424cd50bdd.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body id="bootstrapoverrides">
@@ -90,60 +92,60 @@
       new WOW().init();
     </script>
 
-<div id="mapid" class="wow fadeIn" data-wow-delay="4s"></div>
-<script>
-  $(document).ready(function () {
-    /*enables all map behavior*/
-    mapboxgl.accessToken =
-      "pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ";
-    var start = [-111.8, 32.6];
-    var end = [-77.5, 38];
-    var mapvar = new mapboxgl.Map({
-      //attributionControl: false,
-      container: "mapid",
-      style: "mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu",
-      center: start,
-      zoom: 9,
-    });
-    mapvar.doubleClickZoom.disable();
-    mapvar.scrollZoom.disable();
-    mapvar.dragPan.disable();
-    mapvar.touchZoomRotate.disable();
+    <div id="mapid" class="wow fadeIn" data-wow-delay="4s"></div>
+    <script>
+      $(document).ready(function () {
+        /*enables all map behavior*/
+        mapboxgl.accessToken =
+          "pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ";
+        var start = [-111.8, 32.6];
+        var end = [-77.5, 38];
+        var mapvar = new mapboxgl.Map({
+          //attributionControl: false,
+          container: "mapid",
+          style: "mapbox://styles/dylanc/cikb2yvtr00589fm13z417kdu",
+          center: start,
+          zoom: 9,
+        });
+        mapvar.doubleClickZoom.disable();
+        mapvar.scrollZoom.disable();
+        mapvar.dragPan.disable();
+        mapvar.touchZoomRotate.disable();
 
-    var isAtStart = true;
+        var isAtStart = true;
 
-    function fly() {
-      // depending on whether we're currently at point a or b, aim for
-      // point a or b
-      var target = isAtStart ? end : start;
+        function fly() {
+          // depending on whether we're currently at point a or b, aim for
+          // point a or b
+          var target = isAtStart ? end : start;
 
-      // and now we're at the opposite point
-      isAtStart = !isAtStart;
+          // and now we're at the opposite point
+          isAtStart = !isAtStart;
 
-      mapvar.flyTo({
-        // These options control the ending camera position: centered at
-        // the target, at zoom level 9, and north up.
-        center: target,
-        zoom: 10,
-        bearing: 0,
+          mapvar.flyTo({
+            // These options control the ending camera position: centered at
+            // the target, at zoom level 9, and north up.
+            center: target,
+            zoom: 10,
+            bearing: 0,
 
-        // These options control the flight curve, making it move
-        // slowly and zoom out almost completely before starting
-        // to pan.
-        speed: 0.012, // make the flying slow
-        curve: 0.01, // change the speed at which it zooms out
+            // These options control the flight curve, making it move
+            // slowly and zoom out almost completely before starting
+            // to pan.
+            speed: 0.012, // make the flying slow
+            curve: 0.01, // change the speed at which it zooms out
 
-        // This can be any easing function: it takes a number between
-        // 0 and 1 and returns another number between 0 and 1.
-        easing: function (t) {
-          return t;
-        },
+            // This can be any easing function: it takes a number between
+            // 0 and 1 and returns another number between 0 and 1.
+            easing: function (t) {
+              return t;
+            },
+          });
+        } //End fly() Program
+
+        fly();
       });
-    } //End fly() Program
-
-    fly();
-  });
-</script>
+    </script>
 
     <!--Contact Info Card-->
     <div class="container">
@@ -156,9 +158,7 @@
             <h1>DYLAN SCOTT</h1>
           </div>
           <div class="wow fadeInRight" data-wow-delay="1s">
-            <h4>
-              Activist / Urbanist / Environmentalist / Analyst
-            </h4>
+            <h4>Activist / Urbanist / Environmentalist / Analyst</h4>
           </div>
           <div class="wow fadeInUp" data-wow-delay="1.2s">
             <hr class="medium" />
@@ -248,8 +248,8 @@
               >
             </div>
           </div>
-          </div>
         </div>
+      </div>
     </div>
     <!--end container-->
 
@@ -257,62 +257,85 @@
       <div id="aboutme" class="container">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item active" role="presentation">
-            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">about me</a>
+            <a
+              class="nav-link active"
+              id="home-tab"
+              data-toggle="tab"
+              href="#home"
+              role="tab"
+              aria-controls="home"
+              aria-selected="true"
+              >about me</a
+            >
           </li>
           <li class="nav-item" role="presentation">
-            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">worksamples</a>
+            <a
+              class="nav-link"
+              id="profile-tab"
+              data-toggle="tab"
+              href="#profile"
+              role="tab"
+              aria-controls="profile"
+              aria-selected="false"
+              >worksamples</a
+            >
           </li>
         </ul>
       </div>
       <div class="container tab-content active" id="myTabContent">
-        <div class="tab-pane fade active in" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div
+          class="tab-pane fade active in"
+          id="home"
+          role="tabpanel"
+          aria-labelledby="home-tab"
+        >
           <div class="row">
             <div class="col-sm-12">
               <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
               <h4>
                 <span class="biggerfont">
                   I am a self-taught GIS Developer</span
-                > using my knowledge of web-development,
-                geospatial-analysis, and design to visualize maps in cool
-                meaningful ways. Those visuals become narratives, and
-                those narratives (hopefully in a small way) empower
-                positive change. <br /><br />
+                >
+                using my knowledge of web-development, geospatial-analysis, and
+                design to visualize maps in cool meaningful ways. Those visuals
+                become narratives, and those narratives (hopefully in a small
+                way) empower positive change. <br /><br />
                 <span class="biggerfont">
                   I am the founder of TucsonPathways.org</span
                 >
-                - a data-driven bicycle advocacy organization, focused on
-                visualizing cities' infrastructure for safer, quieter,
-                more enjoyable bicycle commutes. <br /><br />
-                <span class="biggerfont">
-                  I graduated with distinction</span
-                >
+                - a bicycle advocacy organization, centered on data-analytics of
+                city infrastructure. We built a custom bike-navigation web-app
+                that calculates and visualizes alternative routes optimized for
+                safer, quieter, more scenic bicycle commutes. Our goal is to
+                promote commuting for potential-riders who feel intimidated to
+                ride on regular bike-lanes alongside high-stress vehicle
+                traffic. <br /><br />
+                <span class="biggerfont"> I graduated with distinction</span>
                 in Applied Mathematics & Environmental Hydrology from the
-                University of Arizona in the Spring of 2013, working
-                odd-jobs and internships throughout to pay my way through
-                college. <br /><br />
-                <span class="biggerfont">I am a self-learner </span>in a
-                wide array of technical softwares - ArcGIS, QGIS, Spatial
-                Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS,
-                Javascript ES6, git, SQL, Python, Mapbox-GL, Leaflet,
-                Node, Aerial Drone Mapping, Routing Engine Software, City
-                Engine, Database Management, Microsoft Office Suite,
-                along with several others supplementary programs.
+                University of Arizona in the Spring of 2013, working odd-jobs
+                and internships throughout to pay my way through college.
                 <br /><br />
+                <span class="biggerfont">I am a self-learner </span>in a wide
+                array of technical softwares - ArcGIS, QGIS, Spatial Analysis
+                Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS, Javascript ES6,
+                git, VSCode, Mapbox-GL, Leaflet, Node, Aerial Drone Mapping,
+                Graphhopper, SQL, Python, Vue.js, D3.js, Database Management,
+                Microsoft Office Suite, along with several others supplementary
+                programs. <br /><br />
                 <span class="biggerfont"
                   >I am a published technical writer </span
-                >with the United States Geological Survey for my work in
-                using GIS methods to improve estimates of agricultural
-                water-use. I have been formally acknowledged in a
-                publication by the World Resources Institute for my GIS
-                contributions to the Forest Conservation Natural
-                Infrastructure Program. <br /><br />
-                <span class="biggerfont">Through years past </span>I've
-                worked as a bike mechanic, warehouse laborer, bartender, GIS analyst, 
-                hydrological technican, waste collector, research analyst, community-farm
-                laborer, and freelance movie critic. I've bike-toured across the country, competed in
-                the Ultimate Frisbee College National Championships, and
-                volunteered as youth rock-climbing instructor.
-                <br /><br />
+                >with the United States Geological Survey for my work in using
+                GIS methods to improve estimates of agricultural water-use. I
+                have been formally acknowledged in a publication by the World
+                Resources Institute for my GIS contributions to the Forest
+                Conservation Natural Infrastructure Program. <br /><br />
+                <span class="biggerfont">Through years past </span>I've worked
+                as a bike mechanic, warehouse laborer, bartender, GIS analyst,
+                hydrological technican, waste collector, research analyst,
+                community-farm laborer, and freelance movie critic. I've
+                bike-toured across the country, competed in the Ultimate Frisbee
+                College National Championships, and volunteered as youth
+                rock-climbing instructor. <br /><br />
                 <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
                       <br><br> -->
                 <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
@@ -331,12 +354,13 @@
             <!--<div class="aboutmefooter col-xs-10 col-sm-offset-1"><i>More than halfway through my degree program in Physics, I realized I was happier learning about the natural environment around me. I switched my major to Applied Mathematics & Environmental Hydrology and never looked back. I've had the great opportunity to work for both large environmental research institutions, along with small community-based environmental organizations. This diversity have given me a unique prespective on environmental sustainability and new urbanism. I've simultaniously created a strong foundation of skills in critical thinking, data visualization, and geospatial analysis. -->
             <br /><br />
           </div>
-
-
-
-
         </div>
-        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div
+          class="tab-pane fade"
+          id="profile"
+          role="tabpanel"
+          aria-labelledby="profile-tab"
+        >
           <div class="col-lg-4 col-xs-6">
             <a
               href="https://dylansc22.github.io/worksample/"
@@ -354,12 +378,9 @@
                 </div>
               </div>
             </a>
-              </div>
+          </div>
           <div class="col-lg-4 col-xs-6">
-            <a
-              href="http://pubs.usgs.gov/sir/2011/5166/"
-              class="portfolio-box"
-            >
+            <a href="http://pubs.usgs.gov/sir/2011/5166/" class="portfolio-box">
               <img src="img/USGSReport.png" class="img-responsive" alt="" />
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -376,10 +397,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-xs-6">
-            <a
-              href="https://tucsonauts.github.io/tnr"
-              class="portfolio-box"
-            >
+            <a href="https://tucsonauts.github.io/tnr" class="portfolio-box">
               <img src="img/Tucson3.png" class="img-responsive" alt="" />
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -409,8 +427,8 @@
                   </div>
                   <div class="project-name">
                     Comparison of Various GIS Methodologies in Estimating
-                    Industrial Agricultural Water-Use<br /><br />(University
-                    of Arizona Senior Capstone)
+                    Industrial Agricultural Water-Use<br /><br />(University of
+                    Arizona Senior Capstone)
                   </div>
                 </div>
               </div>
@@ -434,9 +452,8 @@
                     TECHNICAL WRITING<br /><br />
                   </div>
                   <div class="project-name">
-                    methodology of suitability index - classify regions
-                    at risk of soil-erosion/land instability<br /><br />(WRI
-                    Internship)
+                    methodology of suitability index - classify regions at risk
+                    of soil-erosion/land instability<br /><br />(WRI Internship)
                   </div>
                 </div>
               </div>
@@ -445,9 +462,6 @@
         </div>
       </div>
     </div>
-
-
-
 
     <!-- Resume Modal -->
     <div
@@ -568,7 +582,6 @@
         </div>
       </div>
     </div>
-
   </body>
 
   <!-- Custom Javascript -->
