+ | SML | Tweak/About me -- Changed a few words.

--- a/index.html
+++ b/index.html
@@ -304,11 +304,10 @@
                   I am the founder of TucsonPathways.org</span
                 >
                 - a bicycle advocacy organization, centered on data-analytics of
-                city infrastructure. We built a custom bike-navigation web-app
-                that calculates and visualizes alternative routes optimized for
-                safer, quieter, more scenic bicycle commutes. Our goal is to
+                city infrastructure. Our Pathways web-app calculates and visualizes alternative bike-commutes optimized for
+                safer, quieter, more scenic rides. Our goal is to
                 promote commuting for potential-riders who feel intimidated to
-                ride on regular bike-lanes alongside high-stress vehicle
+                ride on traditional bike-lanes alongside high-stress vehicle
                 traffic. <br /><br />
                 <span class="biggerfont"> I graduated with distinction</span>
                 in Applied Mathematics & Environmental Hydrology from the
