+ | SML | WorkSample-Addition -- Added my Parks-And-Parking Artistic Cartographic Worksample

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -163,7 +163,7 @@
                                 GIS ANALYSIS
                             </div>
                             <div class="project-name">
-                                Evaluation of Tucson's Public Transit vs Bicycle Infrastructure<br><br>(Personal Porject) 
+                                Finding Safer Bicycle Routes for Tucson Commuters<br><br>Founder & Developer 
                             </div>
                         </div>
                     </div>
@@ -179,6 +179,21 @@
                             </div>
                             <div class="project-name">
                                 Comparison of Various GIS Methodologies in Estimating Industrial Agricultural Water-Use<br><br>(University of Arizona Senior Capstone)
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-xs-6">
+                <a href="#" class="portfolio-box">
+                    <img src="../img/Tucson3.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                CARTOGRAPHY
+                            </div>
+                            <div class="project-name">
+                                An artistic cartographic look at the space our city dedicates to parks vs parking lots<br><br>GIS ANALYSIS / CARTOGRAPHY 
                             </div>
                         </div>
                     </div>
