--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
                   I am the founder of TucsonPathways.org</span
                 >
                 - a bicycle advocacy organization, centered on data-analytics of
-                city infrastructure. Our Pathways web-app calculates and visualizes alternative bike-commutes optimized for
-                safer, quieter, more scenic rides. Our goal is to
-                promote commuting for potential-riders who feel intimidated to
-                ride on traditional bike-lanes alongside high-stress vehicle
-                traffic. <br /><br />
+                city infrastructure. Our Pathways web-app calculates and
+                visualizes alternative bike-commutes optimized for safer,
+                quieter, more scenic rides. Our goal is to promote commuting for
+                potential-riders who feel intimidated to ride on traditional
+                bike-lanes alongside high-stress vehicle traffic. <br /><br />
                 <span class="biggerfont"> I graduated with distinction</span>
                 in Applied Mathematics & Environmental Hydrology from the
                 University of Arizona in the Spring of 2013, working odd-jobs
@@ -453,6 +453,29 @@
                   <div class="project-name">
                     methodology of suitability index - classify regions at risk
                     of soil-erosion/land instability<br /><br />(WRI Internship)
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-xs-6">
+            <a
+              href="https://dylansc22.github.io/parks-and-parking"
+              class="portfolio-box"
+            >
+              <img
+                src="img/ParksAndParking.png"
+                class="img-responsive"
+                alt=""
+              />
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    CARTOGRAPHIC DESIGN<br /><br />
+                  </div>
+                  <div class="project-name">
+                    Artistic interpretation of city-space dedicated to people
+                    versus cars<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
