+ | SML | Worksample-Addition -- Added TP Compare map to worksamples

--- a/index.html
+++ b/index.html
@@ -474,8 +474,30 @@
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Artistic interpretation of city-space dedicated to people
+                    Data visualization of city-space dedicated to people
                     versus cars<br /><br />(Personal Project)
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-xs-6">
+            <a
+              href="tucsonpathways.org/compare"
+              class="portfolio-box"
+            >
+              <img
+                src="img/Compare.png"
+                class="img-responsive"
+                alt=""
+              />
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    CARTOGRAPHIC DESIGN<br /><br />
+                  </div>
+                  <div class="project-name">
+                    Data visualization map-slider between city's high-traffic roads & low-traffic roads<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
