--- a/index.html
+++ b/index.html
@@ -503,6 +503,28 @@
               </div>
             </a>
           </div>
+          <div class="col-lg-4 col-xs-6">
+            <a
+              href="tucsonpathways.org/map"
+              class="portfolio-box"
+            >
+              <img
+                src="img/NightLights.png"
+                class="img-responsive"
+                alt=""
+              />
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    CARTOGRAPHIC DESIGN<br /><br />
+                  </div>
+                  <div class="project-name">
+                    Data visualization of Tucson's StreetLights, as a supplementary map-layer for web-app<br /><br />(Personal Project)
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
