+ | SML | Hotfix -- Fixed broken links in worksample page

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           </div>
           <div class="col-lg-4 col-xs-6">
             <a
-              href="tucsonpathways.org/compare"
+              href="https://tucsonpathways.org/compare"
               class="portfolio-box"
             >
               <img
@@ -505,7 +505,7 @@
           </div>
           <div class="col-lg-4 col-xs-6">
             <a
-              href="tucsonpathways.org/map"
+              href="https://tucsonpathways.org/map"
               class="portfolio-box"
             >
               <img
