+ | SML | Images/Shrink-Size -- Each worksample picture was 1920x1080, way too big. Fixed that.

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-xs-6">
-            <a href="https://tucsonauts.github.io/tnr" class="portfolio-box">
+            <a href="https://tucsonauts.github.io/tnr/" class="portfolio-box">
               <img src="img/Tucson3.png" class="img-responsive" alt="" />
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -483,7 +483,7 @@
           </div>
           <div class="col-lg-4 col-xs-6">
             <a
-              href="https://tucsonpathways.org/compare"
+              href="https://tucsonauts.github.io/tnr/compare"
               class="portfolio-box"
             >
               <img
@@ -505,7 +505,7 @@
           </div>
           <div class="col-lg-4 col-xs-6">
             <a
-              href="https://tucsonpathways.org/map"
+              href="https://tucsonauts.github.io/tnr/map"
               class="portfolio-box"
             >
               <img
