--- a/index.html
+++ b/index.html
@@ -525,6 +525,28 @@
               </div>
             </a>
           </div>
+          <div class="col-lg-4 col-xs-6">
+            <a
+              href="https://dylansc22.github.io/four-corner-states"
+              class="portfolio-box"
+            >
+              <img
+                src="img/FourCornerStates.png"
+                class="img-responsive"
+                alt=""
+              />
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    CARTOGRAPHIC DESIGN<br /><br />
+                  </div>
+                  <div class="project-name">
+                    Data visualization of terrain of the four corner states<br /><br />(Personal Project)
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
