+ | SML | Worksample-Addition -- Updated the Street-light map to be a lot prettier and its own seperate web-address

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           </div>
           <div class="col-lg-4 col-xs-6">
             <a
-              href="https://tucsonauts.github.io/tnr/map"
+              href="https://dylansc22.github.io/nightglow"
               class="portfolio-box"
             >
               <img
@@ -519,7 +519,7 @@
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization of Tucson's StreetLights, as a supplementary map-layer for web-app<br /><br />(Personal Project)
+                    Data visualization of Tucson at night, simulating the glow of street-lights & house-lights<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
