+ | SML | Tweak/Four-Corner-States -- Tweaked picture and description of worksample

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     CARTOGRAPHIC DESIGN<br /><br />
                   </div>
                   <div class="project-name">
-                    Data visualization of terrain of the four corner states<br /><br />(Personal Project)
+                    Data visualization of the best bicycle-touring routes of the four corner states<br /><br />(Personal Project)
                   </div>
                 </div>
               </div>
